Add CSO Directives section and SEO meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Explore the digital shadow world of le-cmyk, a legendary coder. Discover hidden projects, AI labyrinths, encrypted archives, and the dark arts of data engineering.">
   <title>le-cmyk | Coded in the Shadows</title>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <style>
@@ -127,6 +128,21 @@
       <li>Load into clandestine data warehouses, accessible only via token shaders.</li>
       <li>Orchestrate workflows with ghost schedulers, ensuring zero trace logs.</li>
       <li>Monitor and validate streams with AI-driven anomaly detection in real time.</li>
+    </ul>
+  </section>
+
+  <section id="cso-directives">
+    <h2>CSO Directives</h2>
+    <p>From the desk of an unseen Chief Security Officer, directives that shape the digital battlefield:</p>
+    <ul>
+      <li>Zero Trust Architecture: Assume breach. Verify explicitly. Use least privileged access.</li>
+      <li>Threat Intelligence Integration: Proactively hunt for indicators of compromise (IOCs).</li>
+      <li>Immutable Infrastructure: Systems are replaced, not changed. Ephemeral by design.</li>
+      <li>Data Encryption: End-to-end encryption for data at rest, in transit, and in use.</li>
+      <li>Security Automation: Leverage SOAR (Security Orchestration, Automation and Response) for rapid incident response.</li>
+      <li>Continuous Monitoring: Real-time anomaly detection and behavioral analytics.</li>
+      <li>Red Team Operations: Constant adversarial simulation to test defenses.</li>
+      <li>Supply Chain Security: Vet all third-party code and hardware components rigorously.</li>
     </ul>
   </section>
 
